html-capstone/resources/capstone-style.css
/*Universal Styles */
body {
    margin:0;
}
h1 {
    font-size: 64px;
    color: darkslategray;
    font-weight: bolder;
    font-family: calibri;
}

h2 { 
    font-size: 32px;
    color:darkslategray;
    font-family: calibri;
    font-weight: bold;
}

h3 {
}

h4{ 
    font-size: 24px;
    color: black;
    text-transform: uppercase;
    font-family: calibri;
    font-weight: lighter;
}

h5 {
    font-size: 18px;
    color: black;
    font-family: calibri;
    font-weight: normal;
}

p {
    font-size: 24px;
    color: black;
    font-weight: lighter;
    font-family: Calibri;
    font-weight: lighter;
}

a {
    font-size: 16px;
    color: blue;
    font-family: calibri;
    text-decoration: none;
}

/*Header and Nav Bar */

.header-nav {
    display: flex;
    width: 100%;
    justify-content: space-between;
    height: 64px;
    position: fixed;
    z-index: 0;
    background-color: white;
}

.header-nav .logo {
    display: flex;
}

.header-nav .logo p {
    font-size: 24px;
    color: black;
    text-transform: uppercase;
    font-family: calibri;
    font-weight: lighter;
    align-self: center;
}

.header-nav .nav-bar {
    display: flex;
    justify-content: space-between;
    padding-right: 24px;
    align-self: center;
}

.header-nav .nav-bar a {
    font-size: 18px;
    color: gray;
    font-family: calibri;
    text-decoration: none;
    padding-left: 16px;
}

/* banner content */
.banner {
    background-color: lightgrey;
    display: flex;
}

.banner img{
    width: 60%;
    margin: 32px 24px;
}

.banner .CTA {
    align-self: center;
    margin-left: 24px;
}

.banner .CTA button {
    background-color: darkslategray;
    border: none;
    color:white;
    width: 100%;
    font-family: calibri;
    font-size: 24px;
    padding-top: 8px;
    padding-bottom: 8px;
}

/* Information content */

.information {
    display: flex;
    justify-content: space-between;
    width: 100%;
}

.information .spotlight {
    margin: 32px 24px;
    width: 60%;
}

.information .spotlight img {
    width: 100%;
}

.information .spotlight .caption {

}

.information .sidebar{
    width: 40%;
    justify-self: right;
    padding: 32px 16px;
    justify-self: flex-end;
    border: 2px solid lightgray;
    border-top: none;
    border-bottom: none;
    justify-content: space-around;
    height: 100%;
}

.information .orientation {
    display: flex;
    border-bottom: 2px solid lightgray;
}

.information .campus {
    display: flex;
    border-bottom: 2px solid lightgray;
}

.information .guest {
    display: flex;
    background-color: lightgray;
}
.information .sidebar .orientation img{
    display: block;
    width: 35%;
    height: auto;
    padding: 16px 16px;
}

.information .sidebar .campus img{
    display: block;
    width: 35%;
    height: auto;
    padding: 16px 16px;
}

.information .sidebar .guest img{
    display: block;
    width: 35%;
    height: auto;
    padding: 16px 16px;
}

.information .sidebar .orientation .text {
    flex-direction: column;
    width: 65%;
    padding: 8px 8px;
    border: none;
}

.information .sidebar .campus .text {
    flex-direction: column;
    width: 65%;
    border: none;
}

.information .sidebar .guest .text {
    flex-direction: column;
    width: 65%;
    border: none;
}

/* Start Learning style */

.start-learning {
    background-color: lightgray;
    max-width: 100%;
}

.start-learning .title {
    text-align: center;
    padding: 32px 32px;

}

.start-learning .all-courses {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-items: center;
    margin-left:72px;
    margin-right: 72px;
    padding-bottom: 32px;
    max-width: 100%;
}

.start-learning .courses {
    background-color: white;
    margin: 32px;
    
}

.start-learning .courses img {
}

.start-learning .text {
    padding-left: 16px;
    padding-top: 16px;
    max-width: 100%;
}

